Generate the executable with lower case project name

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,5 +27,6 @@ include_directories(
 
 aux_source_directory(${PROJECT_SOURCE_DIR} PROJECT_SOURCE_FILES)
 
-add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_FILES} ${GENERATED_ANTLR_SOURCES})
-target_link_libraries(${PROJECT_NAME} ${ANTLR4RUNTIME_LIBRARIES})
+string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)
+add_executable(${PROJECT_NAME_LOWER} ${PROJECT_SOURCE_FILES} ${GENERATED_ANTLR_SOURCES})
+target_link_libraries(${PROJECT_NAME_LOWER} ${ANTLR4RUNTIME_LIBRARIES})
